--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   </div>
 
   <!-- https://github.com/nicinabox/superslides MIT -->
-  <div id="slides">
-    <!-- overlay -->
+  <!-- <div id="slides">
+    overlay
     <div class="overlay"></div>
 
-    <!-- https://icons8.com/icons/set/next - icons -->
+    https://icons8.com/icons/set/next - icons
     <div class="slides-container">
-      <!-- <img src="./img/artificial-intelligence-blur-close-up-546819.jpg" alt="" />
+      <img src="./img/artificial-intelligence-blur-close-up-546819.jpg" alt="" />
       <img src="./img/insung-yoon-qTRGISczzM8-unsplash.jpg" alt="" />
       <img src="./img/nikolai-chernichenko-fE01RfgmN7o-unsplash.jpg" alt="" />
-      <img src="./img/jordan-harrison-40XgDxBfYXM-unsplash.jpg" alt="" /> -->
+      <img src="./img/jordan-harrison-40XgDxBfYXM-unsplash.jpg" alt="" />
       <img src="./img/collage.png" alt="" />
       <img src="./img/chewOnThis.jpg" alt="" />
     </div>
@@ -47,8 +47,8 @@
         <p><img src="./img/icons/mw_logo.png" alt="Manuel Padilla logo" /></p>
         <p class="main">Manuel Padilla</p>
         <p class="sub">Front-End Developer</p>
-        <!-- <p class="sub">Graphic Design</p> -->
-        <!-- <p class="quote typed"></p> -->
+        <p class="sub">Graphic Design</p>
+        <p class="quote typed"></p>
 
         <nav class="slides-navigation">
           <a href="#" class="next"></a>
@@ -56,7 +56,7 @@
         </nav>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <nav id="navigation" class="navbar navbar-expand-lg">
     <!-- <a class="navbar-brand" href="#slides">Manuel Padilla</a> -->
@@ -68,18 +68,18 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <!-- <li class="nav-item active">
           <a class="nav-link logo" href="#slides"><span class="sr-only">(current)</span>
             <img src="./img/icons/mw_logo.png" alt="Manuel Padilla logo" /></a>
-        </li>
-        <li>
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <!-- <li>
-          <a class="nav-link" href="#certs">Certifications</a>
         </li> -->
         <li>
-          <a class="nav-link" href="#skills">Skills</a>
+          <a class="nav-link" href="#about">About Me</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#certs">Certifications</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#skills">Proficiencies</a>
         </li>
         <!-- <li>
             <a class="nav-link" href="#stats">Stats</a>
@@ -87,34 +87,67 @@
         <li>
           <a class="nav-link" href="#contact">Contact</a>
         </li>
-        <li>
+        <!-- <li>
           <a class="nav-link" href="#portfolio">Front-End Portfolio</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
 
   <div id="about" class="section">
     <div class="container">
+
       <div class="row">
         <div class="col-md-5">
           <img class="aboutImage" src="./img/portfolioImageBlueLg.png" alt="image of Manuel Padilla" />
         </div>
         <div class="col-md-7">
-          <h4>Thanks for visiting my site.</h4>
-          <p>
-            The major portion of my professional career has been in graphic design, I graduated from Houston Community
-            College with a degree in Graphic
-            Design Specialization. I was awarded Digital Communications Student of the Year in 2010. To keep up with
-            this digital age, I'm taking my skills to another level. I received a certificate in web development from UT
-            Austin and am continuing a front-end development approach through Scrimba.com. The problem solving skills I
-            used in graphic design can be applied to help solve front-end development needs. También hablo español.</p>
+
+          <div class="titleMessage">
+            <div class="heading">
+              <p class="main">Manuel Padilla</p>
+              <p class="sub">AWS Cloud | IT Support</p>
+              <h4>Thanks for visiting my site.</h4>
+              <p>
+                I'm a driven and responsible AWS re/Start graduate aimed at contributing and growing in an
+                IT | cloud-focused
+                support and operation organization. I bring strong verbal and written communication skills, efficiency,
+                organization, empathy, a team player attitude, with the ability to explain technical information to
+                non-technical end users.
+              </p>
+              <ul>
+                <li>
+                  Customer service skills, with the ability to remain professional in stressful, high pressure
+                  situations.
+                </li>
+                Effective at problem solving through analysis.
+                <li>
+                  IT fundamental skills, including a working knowledge of Linux OS and writing scripts in Python and
+                  Shell.
+                </li>
+                <li>
+                  Applying core AWS services in compute, storage and networking, including EC2, S3, IAM, VPC, Lambda,
+                  Cloud Formation, RDS and Route 53
+                </li>
+                <li>
+                  Configuring, monitoring, and supporting the suite of core AWS services
+                </li>
+                <li>
+                  Microsoft Word | Excel
+                </li>
+                <li>
+                  Spanish fluency
+                </li>
+              </ul>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </div>
 
-  <!-- <div id="certs" class="certSection section">
+  <div id="certs" class="certSection section">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
@@ -125,6 +158,14 @@
           <ul>
             <li><i>In Progress</i></li>
           </ul>
+          <h3>Amazon Web Services</h3>
+          <div class="cert_list">
+            <ul class=" certlist">
+              <li><a href="https://www.credly.com/earner/earned/badge/07dff0f2-1423-47ba-ab07-dab242cf6227"
+                  target="_blank">AWS
+                  Certified Cloud Practitioner</a></li>
+            </ul>
+          </div>
           <h3>Google</h3>
           <div class="cert_list">
             <ul class="certlist">
@@ -141,36 +182,24 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div id="skills" class="skillsSection section">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>Technical and Business Proficiencies</h2>
+          <h2>Proficiencies</h2>
           <p>Swipe to view skills</p>
 
-          <p class="title">Technical</p>
+          <p class="title">Technical Skills</p>
           <div class="owl-carousel owl-theme">
+            <div class="skill">
+              <h4>AWS</h4>
+              <i class="devicon--amazonwebservices-plain-wordmark icon"></i>
+            </div>
             <div class="skill">
               <h4>HTML</h4>
               <i class="devicon-html5-plain icon"></i>
-            </div>
-            <div class="skill">
-              <h4>CSS</h4>
-              <i class="devicon-css3-plain icon"></i>
-            </div>
-            <div class="skill">
-              <h4>Javascript</h4>
-              <i class="devicon-javascript-plain icon"></i>
-            </div>
-            <div class="skill">
-              <h4>Illustrator</h4>
-              <i class="devicon-illustrator-plain icon"></i>
-            </div>
-            <div class="skill">
-              <h4>Photoshop</h4>
-              <i class="devicon-photoshop-plain icon"></i>
             </div>
             <div class="skill">
               <h4>Linux</h4>
@@ -180,9 +209,25 @@
               <h4>Windows</h4>
               <i class="devicon-windows8-original icon"></i>
             </div>
+            <div class="skill">
+              <h4>Git</h4>
+              <i class="devicon-git-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>MySQL</h4>
+              <i class="devicon-mysql-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>Python</h4>
+              <i class="devicon-python-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>VScode</h4>
+              <i class="devicon-vscode-plain icon"></i>
+            </div>
           </div>
 
-          <p class="title">Business</p>
+          <p class="title">Soft Skills</p>
           <div class="owl-carousel owl-theme">
             <div>
               <h4>Work Ethic</h4>
@@ -285,13 +330,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>Hiring?</h2>
-          <!-- <p class="subHeading">
-                Please let me know how I can help with your tech support needs.
-              </p> -->
-          <h2>I look forward to hearing from you.</h2>
-          <a href="mailTo:manuelpadilla83@hotmail.com" class="contactButton">MESSAGE ME</a>
-          <a href="./documents/ManuelPadilla_resume.pdf" target="_blank" class="contactButton">MY RESUME
+          <h2>I'm open for work.</h2>
+          <!-- <h2>Thanks for visiting.</h2> -->
+          <a href="mailTo:manuelantoniopadilla@gmail.com" class="contactButton">EMAIL</a>
+          <a href="./documents/ManuelPadilla-resume.pdf" target="_blank" class="contactButton">MY RESUME
           </a>
           <p>
           <h2>832-434-1758</h2>
@@ -301,7 +343,7 @@
     </div>
   </div>
 
-  <div id="portfolio" class="section">
+  <!-- <div id="portfolio" class="section">
     <div class="container">
       <div class="row">
         <div class="heading">
@@ -311,7 +353,7 @@
         <div class="filter">
           <ul id="filters">
             <li><a href="#" data-filter="*" class="current">ALL</a></li>
-            <!-- <li><a href="#" data-filter=".wordpress">WordPress</a></li> -->
+            s
             <li><a href="#" data-filter=".apps">APPS</a></li>
             <li><a href="#" data-filter=".websites">WEBSITES</a></li>
           </ul>
@@ -433,7 +475,7 @@
               </div>
               <p>Eat Da Burger</p>
             </li>
-            <!-- <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+            <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
                 <img src="./img/portfolio/thumbnails/friendFinder_square.png" />
 
@@ -454,7 +496,7 @@
                 <div class="imageOverlay"></div>
               </div>
               <p>Friend Finder</p>
-            </li> -->
+            </li>
             <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
                 <img src="./img/portfolio/thumbnails/gifTastic_square.png" />
@@ -570,7 +612,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="copyrightSection">
     <div class="col-md-12 text-center">
@@ -584,7 +626,7 @@
         <a href="https://www.behance.net/manuel-padilla" target="_blank">
           <img src="./img/icons/behance.png" alt="behance Manuel Padilla" /></a>
       </div>
-      <p>&copy; Copyright Manuel Padilla 2021</p>
+      <p>&copy; Copyright Manuel Padilla 2022</p>
     </div>
   </div>
 
