--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="owl-carousel owl-theme">
             <div class="skill">
               <h4>AWS</h4>
-              <i class="devicon--amazonwebservices-plain-wordmark icon"></i>
+              <i class="devicon-amazonwebservices-plain-wordmark icon"></i>
             </div>
             <div class="skill">
               <h4>HTML</h4>
@@ -223,7 +223,7 @@
             </div>
             <div class="skill">
               <h4>VScode</h4>
-              <i class="devicon-vscode-plain icon"></i>
+              <i class="devicon-vscode-plain"></i>
             </div>
           </div>
 
@@ -231,32 +231,32 @@
           <div class="owl-carousel owl-theme">
             <div>
               <h4>Work Ethic</h4>
-              <img src="./img/icons/workethic.png" class="skill_image" alt="workethic" />
+              <img src="./img/icons/workethic_blue.png" class="skill_image" alt="workethic" />
             </div>
             <div class="skill">
               <h4>Adaptability
               </h4>
-              <img src="./img/icons/adaptability.png" class="skill_image" alt="adaptability" />
+              <img src="./img/icons/adaptability_blue.png" class="skill_image" alt="adaptability" />
             </div>
             <div class="skill">
               <h4>Empathy
               </h4>
-              <img src="./img/icons/empathy.png" class="skill_image" alt="empathy" />
+              <img src="./img/icons/empathy_blue.png" class="skill_image" alt="empathy" />
             </div>
             <div class="skill">
               <h4>Trustworthy
               </h4>
-              <img src="./img/icons/trustworthy.png" class="skill_image" alt="trustworthy" />
+              <img src="./img/icons/trustworthy_blue.png" class="skill_image" alt="trustworthy" />
             </div>
             <div class="skill">
               <h4>Organized
               </h4>
-              <img src="./img/icons/organized.png" class="skill_image" alt="organized" />
+              <img src="./img/icons/organized_blue.png" class="skill_image" alt="organized" />
             </div>
             <div class="skill">
               <h4>Communication
               </h4>
-              <img src="./img/icons/communication.png" class="skill_image" alt="communication" />
+              <img src="./img/icons/communication_blue.png" class="skill_image" alt="communication" />
             </div>
           </div>
         </div>
@@ -333,7 +333,8 @@
           <h2>I'm open for work.</h2>
           <!-- <h2>Thanks for visiting.</h2> -->
           <a href="mailTo:manuelantoniopadilla@gmail.com" class="contactButton">EMAIL</a>
-          <a href="./documents/ManuelPadilla-resume.pdf" target="_blank" class="contactButton">MY RESUME
+          <a href="https://manuelpadilla.dev/documents/ManuelPadilla-resume.pdf" target="_blank"
+            class="contactButton">MY RESUME
           </a>
           <p>
           <h2>832-434-1758</h2>
