--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="owl-carousel owl-theme">
             <div class="skill">
               <h4>AWS</h4>
-              <i class="devicon-amazonwebservices-plain-wordmark icon"></i>
+              <i class="devicon-amazonwebservices-original icon"></i>
             </div>
             <div class="skill">
               <h4>HTML</h4>
@@ -223,7 +223,7 @@
             </div>
             <div class="skill">
               <h4>VScode</h4>
-              <i class="devicon-vscode-plain"></i>
+              <i class="devicon-vscode-plain icon"></i>
             </div>
           </div>
 
