--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+
 
   <link rel="stylesheet" href="./css/style.css" />
 
@@ -120,7 +122,9 @@
                   Customer service skills, with the ability to remain professional in stressful, high pressure
                   situations.
                 </li>
-                Effective at problem solving through analysis.
+                <li>
+                  Effective at problem solving through analysis.
+                </li>
                 <li>
                   IT fundamental skills, including a working knowledge of Linux OS and writing scripts in Python and
                   Shell.
@@ -194,7 +198,7 @@
           <p class="title">Technical Skills</p>
           <div class="owl-carousel owl-theme">
             <div class="skill">
-              <h4>AWS</h4>
+              <h4>Amazon Web Services</h4>
               <i class="devicon-amazonwebservices-original icon"></i>
             </div>
             <div class="skill">
