--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+  <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 
 
   <link rel="stylesheet" href="./css/style.css" />
@@ -165,9 +166,12 @@
           <h3>Amazon Web Services</h3>
           <div class="cert_list">
             <ul class=" certlist">
-              <li><a href="https://www.credly.com/earner/earned/badge/07dff0f2-1423-47ba-ab07-dab242cf6227"
+              <li><a href="https://www.credly.com/badges/07dff0f2-1423-47ba-ab07-dab242cf6227/public_url"
                   target="_blank">AWS
                   Certified Cloud Practitioner</a></li>
+              <div data-iframe-width="150" data-iframe-height="270"
+                data-share-badge-id="07dff0f2-1423-47ba-ab07-dab242cf6227"
+                data-share-badge-host="https://www.credly.com"></div>
             </ul>
           </div>
           <h3>Google</h3>
