--- a/index.html
+++ b/index.html
@@ -168,10 +168,12 @@
             <ul class=" certlist">
               <li><a href="https://www.credly.com/badges/07dff0f2-1423-47ba-ab07-dab242cf6227/public_url"
                   target="_blank">AWS
-                  Certified Cloud Practitioner</a></li>
-              <div data-iframe-width="150" data-iframe-height="270"
+                  Certified Cloud Practitioner <br>
+                  <!-- <div data-iframe-width="150" data-iframe-height="270"
                 data-share-badge-id="07dff0f2-1423-47ba-ab07-dab242cf6227"
-                data-share-badge-host="https://www.credly.com"></div>
+                data-share-badge-host="https://www.credly.com"></div> -->
+                  <img src="./img/icons/aws-certified-cloud-practitioner_174x174.png" alt="AWS badge">
+                </a></li>
             </ul>
           </div>
           <h3>Google</h3>
