--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Manuel Padilla</title>
 
   <link rel="shortcut icon" type="image/png" href="./img/icons/m_logo.png" />
-  <link rel="stylesheet" href="./css/superslides.css" />
+  <!-- <link rel="stylesheet" href="./css/superslides.css" /> -->
   <link rel="stylesheet" href="./css/owl.carousel.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> -->
   <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 
 
