--- a/index.html
+++ b/index.html
@@ -641,12 +641,12 @@
     </div>
   </div>
 
-  <script src="./js/countUp.js"></script>
+  <!-- <script src="./js/countUp.js"></script>
   <script src="./js/countUp-jquery.js"></script>
   <script src="./js/jquery.superslides.min.js"></script>
-  <script src="./js/jquery.easypiechart.min.js"></script>
+  <script src="./js/jquery.easypiechart.min.js"></script> -->
   <script src="./js/owl.carousel.min.js"></script>
-  <script src="./js/typed.min.js"></script>
+  <!-- <script src="./js/typed.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
