--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
           <p>Swipe to view skills</p>
 
           <p class="title">Technical Skills</p>
-          <div class="owl-carousel owl-theme">
+          <div>
+            <!-- class="owl-carousel owl-theme" -->
             <div class="skill">
               <h4>Amazon Web Services</h4>
               <i class="devicon-amazonwebservices-original icon"></i>
@@ -238,7 +239,8 @@
           </div>
 
           <p class="title">Soft Skills</p>
-          <div class="owl-carousel owl-theme">
+          <div>
+            <!-- class="owl-carousel owl-theme" -->
             <div>
               <h4>Work Ethic</h4>
               <img src="./img/icons/workethic_blue.png" class="skill_image" alt="workethic" />
