--- a/index.html
+++ b/index.html
@@ -202,45 +202,43 @@
           <p>Swipe to view skills</p>
 
           <p class="title">Technical Skills</p>
-          <!-- <div> -->
-          <!-- class="owl-carousel owl-theme" -->
-          <div class="skill">
-            <h4>Amazon Web Services</h4>
-            <i class="devicon-amazonwebservices-original icon"></i>
+          <div class="owl-carousel owl-theme">
+            <div class="skill">
+              <h4>Amazon Web Services</h4>
+              <i class="devicon-amazonwebservices-original icon"></i>
+            </div>
+            <div class="skill">
+              <h4>HTML</h4>
+              <i class="devicon-html5-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>Linux</h4>
+              <i class="devicon-linux-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>Windows</h4>
+              <i class="devicon-windows8-original icon"></i>
+            </div>
+            <div class="skill">
+              <h4>Git</h4>
+              <i class="devicon-git-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>MySQL</h4>
+              <i class="devicon-mysql-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>Python</h4>
+              <i class="devicon-python-plain icon"></i>
+            </div>
+            <div class="skill">
+              <h4>VScode</h4>
+              <i class="devicon-vscode-plain icon"></i>
+            </div>
           </div>
-          <div class="skill">
-            <h4>HTML</h4>
-            <i class="devicon-html5-plain icon"></i>
-          </div>
-          <div class="skill">
-            <h4>Linux</h4>
-            <i class="devicon-linux-plain icon"></i>
-          </div>
-          <div class="skill">
-            <h4>Windows</h4>
-            <i class="devicon-windows8-original icon"></i>
-          </div>
-          <div class="skill">
-            <h4>Git</h4>
-            <i class="devicon-git-plain icon"></i>
-          </div>
-          <div class="skill">
-            <h4>MySQL</h4>
-            <i class="devicon-mysql-plain icon"></i>
-          </div>
-          <div class="skill">
-            <h4>Python</h4>
-            <i class="devicon-python-plain icon"></i>
-          </div>
-          <div class="skill">
-            <h4>VScode</h4>
-            <i class="devicon-vscode-plain icon"></i>
-          </div>
-          <!-- </div> -->
 
           <p class="title">Soft Skills</p>
-          <div>
-            <!-- class="owl-carousel owl-theme" -->
+          <div class="owl-carousel owl-theme">
             <div>
               <h4>Work Ethic</h4>
               <img src="./img/icons/workethic_blue.png" class="skill_image" alt="workethic" />
