--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Manuel Padilla</title>
 
   <link rel="shortcut icon" type="image/png" href="./img/icons/m_logo.png" />
-  <!-- <link rel="stylesheet" href="./css/superslides.css" /> -->
+  <link rel="stylesheet" href="./css/superslides.css" />
   <link rel="stylesheet" href="./css/owl.carousel.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -647,7 +647,7 @@
   <script src="./js/jquery.easypiechart.min.js"></script> -->
   <script src="./js/script.js"></script>
   <script src="./js/owl.carousel.min.js"></script>
-  <!-- <script src="./js/typed.min.js"></script> -->
+  <script src="./js/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
