--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <link rel="shortcut icon" type="image/png" href="./img/icons/m_logo.png" />
   <link rel="stylesheet" href="./css/superslides.css" />
-  <link rel="stylesheet" href="./css/owl.carousel.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <script src="https://kit.fontawesome.com/6b66afe99c.js"></script>
@@ -19,6 +18,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 
+  <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
   <link rel="stylesheet" href="./css/style.css" />
 
@@ -202,7 +203,7 @@
           <p>Swipe to view skills</p>
 
           <p class="title">Technical Skills</p>
-          <div class="owl-carousel owl-theme">
+          <div class="owl-carousel">
             <div class="skill">
               <h4>Amazon Web Services</h4>
               <i class="devicon-amazonwebservices-original icon"></i>
@@ -238,7 +239,7 @@
           </div>
 
           <p class="title">Soft Skills</p>
-          <div class="owl-carousel owl-theme">
+          <div class="owl-carousel">
             <div>
               <h4>Work Ethic</h4>
               <img src="./img/icons/workethic_blue.png" class="skill_image" alt="workethic" />
@@ -646,8 +647,12 @@
   <script src="./js/jquery.superslides.min.js"></script>
   <script src="./js/jquery.easypiechart.min.js"></script> -->
   <script src="./js/script.js"></script>
-  <script src="./js/owl.carousel.min.js"></script>
+
   <script src="./js/typed.min.js"></script>
+
+  <script src="jquery.min.js"></script>
+  <script src="owlcarousel/owl.carousel.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
