--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <p>Swipe to view skills</p>
 
           <p class="title">Technical Skills</p>
-          <div class="owl-carousel">
+          <div class="owl-carousel owl-theme">
             <div class="skill">
               <h4>Amazon Web Services</h4>
               <i class="devicon-amazonwebservices-original icon"></i>
