--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <title>Manuel Padilla</title>
 
   <link rel="shortcut icon" type="image/png" href="./img/icons/m_logo.png" />
-  <link rel="stylesheet" href="./css/superslides.css" />
+
+  <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+
+  <!-- <link rel="stylesheet" href="./css/superslides.css" /> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <script src="https://kit.fontawesome.com/6b66afe99c.js"></script>
@@ -17,9 +21,6 @@
     href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" /> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-
-  <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
-  <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
   <link rel="stylesheet" href="./css/style.css" />
 
@@ -648,7 +649,7 @@
   <script src="./js/jquery.easypiechart.min.js"></script> -->
   <script src="./js/script.js"></script>
 
-  <script src="./js/typed.min.js"></script>
+  <!-- <script src="./js/typed.min.js"></script> -->
 
   <script src="jquery.min.js"></script>
   <script src="owlcarousel/owl.carousel.min.js"></script>
