--- a/index.html
+++ b/index.html
@@ -109,38 +109,23 @@
               <p class="sub">AWS Cloud | IT Support</p>
               <h4>Thanks for visiting my site.</h4>
               <p>
-                I'm a driven and responsible AWS re/Start graduate aimed at contributing and growing in an
-                IT | cloud-focused
-                support and operation organization. I bring strong verbal and written communication skills, efficiency,
-                organization, empathy, a team player attitude, with the ability to explain technical information to
-                non-technical end users.
+                I am a detailed-oriented graphic designer with seven years of practice and experience in recruiting. I
+                met crucial deadlines and filled urgent positions. I was recognized with an outstanding employee award
+                and
+                as an outstanding student of the year in digital communications.
               </p>
-              <ul>
-                <li>
-                  Customer service skills, with the ability to remain professional in stressful, high pressure
-                  situations.
-                </li>
-                <li>
-                  Effective at problem solving through analysis.
-                </li>
-                <li>
-                  IT fundamental skills, including a working knowledge of Linux OS and writing scripts in Python and
-                  Shell.
-                </li>
-                <li>
-                  Applying core AWS services in compute, storage and networking, including EC2, S3, IAM, VPC, Lambda,
-                  Cloud Formation, RDS and Route 53
-                </li>
-                <li>
-                  Configuring, monitoring, and supporting the suite of core AWS services
-                </li>
-                <li>
-                  Microsoft Word | Excel
-                </li>
-                <li>
-                  Spanish fluency
-                </li>
-              </ul>
+              <p>
+                An entry-level IT support professional; recently completed the Google IT Support Professional
+                Certificate - a hands-on IT support program that covers troubleshooting, customer service, networking,
+                operating systems, system administration, and security.
+              </p>
+              <p>
+                An AWS re/Start graduate aimed at contributing and growing in a cloud-focused environment to support in
+                the operations of an organization.
+              </p>
+              <p>
+                Hablo Español.
+              </p>
             </div>
           </div>
 
@@ -156,9 +141,9 @@
           <h2>Certifications</h2>
         </div>
         <div>
-          <h3>CompTIA A+</h3>
+          <h3>CompTIA</h3>
           <ul>
-            <li><i>In Progress</i></li>
+            <li><i>A+ In Progress</i></li>
           </ul>
           <h3>Amazon Web Services</h3>
           <div class="cert_list">
@@ -176,14 +161,11 @@
           <h3>Google</h3>
           <div class="cert_list">
             <ul class="certlist">
-              <li><a href="https://www.coursera.org/account/accomplishments/verify/CB42ARSMPRCL"
-                  target="_blank">Technical Support Fundamentals</a></li>
-              <li><a href="https://www.coursera.org/account/accomplishments/verify/AXXVUK8C3E5F" target="_blank">The
-                  Bits and Bites of Computer Networking</a></li>
-              <li><a href="https://www.coursera.org/account/accomplishments/verify/3ZKVL46VYLC3"
-                  target="_blank">Operating Systems and You: Becoming a Power User</a></li>
-              <li><a href="https://www.coursera.org/account/accomplishments/verify/MWGQPP9KBA6W" target="_blank">System
-                  Administration and IT Infrastructure Services</a></li>
+              <li><a href="https://www.credly.com/badges/63412998-9950-464c-9dac-ff00ca6e803d/public_url"
+                  target="_blank">Google IT Support Professional Certificate <br>
+                  <!-- <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="63412998-9950-464c-9dac-ff00ca6e803d" data-share-badge-host="https://www.credly.com"></div> -->
+                  <img src="./img/icons/google-it-support-certificate.png" alt="Google IT Support badge">
+                </a></li>
             </ul>
           </div>
         </div>
@@ -197,7 +179,23 @@
         <div class="col-md-12 text-center">
           <h2>Proficiencies</h2>
 
-          <p class="title">Technical Skills</p>
+          <p class="title">IT Support</p>
+
+          <p>Basic computer architecture | Operating systems (Windows, Linux) | Remote connection and virtual machines |
+            Computer networking | Software management | Troubleshooting | Customer service | Routing concepts | VPNs and
+            proxies | Permissioning | Package and software management | Process management | Resource monitoring |
+            Systems administration | Configuration | Centralized management | Implementing/managing directory services |
+            Data management and recovery | IT security | Cryptology/encryption | Hashing | Network security
+          </p>
+
+          <p class="title">AWS Cloud</p>
+
+          <p>Applying core AWS services in compute, storage and networking, including EC2 | S3 | IAM | VPC | Lambda |
+            Cloud Formation | RDS and Route 53 | Configuring | monitoring | and supporting the suite of core AWS
+            services
+          </p>
+
+          <!-- <p class="title">Technical Skills</p>
 
           <div class="itemsContainer">
             <ul class="items">
@@ -342,7 +340,7 @@
               </li>
 
             </ul>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -355,8 +353,8 @@
         <div class="col-md-12 text-center">
           <h2>I'm open for work.</h2>
           <a href="mailTo:manuelantoniopadilla@gmail.com" class="contactButton">EMAIL</a>
-          <a href="https://manuelpadilla.dev/documents/ManuelPadilla-resume.pdf" target="_blank"
-            class="contactButton">MY RESUME
+          <a href="https://manuelpadilla.dev/documents/manuelpadilla.pdf" target="_blank" class="contactButton">MY
+            RESUME
           </a>
           <p>
           <h2>832-434-1758</h2>
